[gd_scene load_steps=11 format=3 uid="uid://bhhd443ej7smu"]

[ext_resource type="Script" uid="uid://4xlbt5q5d03h" path="res://makers/piece_deets_helper.gd" id="1_kgy3g"]
[ext_resource type="Texture2D" uid="uid://b27r3rshm0ite" path="res://graphics/images/HUD/textBoxBG_partPassive.png" id="2_26mwm"]
[ext_resource type="PackedScene" uid="uid://dosh155duu70e" path="res://scenes/prefabs/objects/pieces/buildingBlocks/socket.tscn" id="3_b8eto"]
[ext_resource type="PackedScene" uid="uid://de0rs2455fdg4" path="res://scenes/prefabs/objects/parts_holder_engine.tscn" id="3_nijwa"]
[ext_resource type="Script" uid="uid://ceadpmi0boxfx" path="res://scripts/objects/camera_follower.gd" id="6_bl5bc"]
[ext_resource type="Script" uid="uid://t4858sodg0x3" path="res://makers/makerCam.gd" id="7_00eor"]

[sub_resource type="BoxMesh" id="BoxMesh_b8eto"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_00eor"]
sky_top_color = Color(0.0910561, 0.0229013, 0, 1)
sky_horizon_color = Color(0.244366, 0.229288, 0.222582, 1)
ground_bottom_color = Color(0.172549, 0.180392, 0.176471, 1)
ground_horizon_color = Color(0.244366, 0.229288, 0.222582, 1)
energy_multiplier = 0.5

[sub_resource type="Sky" id="Sky_6fdki"]
sky_material = SubResource("ProceduralSkyMaterial_00eor")

[sub_resource type="Environment" id="Environment_b8eto"]
background_mode = 2
sky = SubResource("Sky_6fdki")
tonemap_mode = 2
glow_enabled = true

[node name="PieceHelper" type="Control" node_paths=PackedStringArray("engine", "A1", "A2", "A3", "A4", "A5", "B1", "B2", "B3", "B4", "B5", "C1", "C2", "C3", "C4", "C5", "D1", "D2", "D3", "D4", "D5", "E1", "E2", "E3", "E4", "E5", "pieceHolder", "lbl_filepathName", "txt_pieceName", "txt_pieceDescription", "tree", "camHolder", "makerCamera", "followerCamera", "save_txt_newPath", "save_txt_oldPath", "save_lbl_success", "newPathPrefix", "ConfirmSavePopup", "btn_cancelSave", "btn_saveAs")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgy3g")
engine = NodePath("PartsHolder_Engine")
A1 = NodePath("EngineBlockCustomizer/A1")
A2 = NodePath("EngineBlockCustomizer/A2")
A3 = NodePath("EngineBlockCustomizer/A3")
A4 = NodePath("EngineBlockCustomizer/A4")
A5 = NodePath("EngineBlockCustomizer/A5")
B1 = NodePath("EngineBlockCustomizer/B1")
B2 = NodePath("EngineBlockCustomizer/B2")
B3 = NodePath("EngineBlockCustomizer/B3")
B4 = NodePath("EngineBlockCustomizer/B4")
B5 = NodePath("EngineBlockCustomizer/B5")
C1 = NodePath("EngineBlockCustomizer/C1")
C2 = NodePath("EngineBlockCustomizer/C2")
C3 = NodePath("EngineBlockCustomizer/C3")
C4 = NodePath("EngineBlockCustomizer/C4")
C5 = NodePath("EngineBlockCustomizer/C5")
D1 = NodePath("EngineBlockCustomizer/D1")
D2 = NodePath("EngineBlockCustomizer/D2")
D3 = NodePath("EngineBlockCustomizer/D3")
D4 = NodePath("EngineBlockCustomizer/D4")
D5 = NodePath("EngineBlockCustomizer/D5")
E1 = NodePath("EngineBlockCustomizer/E1")
E2 = NodePath("EngineBlockCustomizer/E2")
E3 = NodePath("EngineBlockCustomizer/E3")
E4 = NodePath("EngineBlockCustomizer/E4")
E5 = NodePath("EngineBlockCustomizer/E5")
pieceHolder = NodePath("Socket")
lbl_filepathName = NodePath("FilepathName")
txt_pieceName = NodePath("PieceData/PieceName")
txt_pieceDescription = NodePath("PieceData/PieceDescription")
tree = NodePath("Tree")
camHolder = NodePath("camHolder")
makerCamera = NodePath("camHolder/MakerCam")
followerCamera = NodePath("FollowerCamera")
save_txt_newPath = NodePath("ConfirmSavePopup/NewPath")
save_txt_oldPath = NodePath("ConfirmSavePopup/OldPath")
save_lbl_success = NodePath("ConfirmSavePopup/Success")
newPathPrefix = NodePath("ConfirmSavePopup/newPathPrefix")
ConfirmSavePopup = NodePath("ConfirmSavePopup")
btn_cancelSave = NodePath("ConfirmSavePopup/CancelSave")
btn_saveAs = NodePath("ConfirmSavePopup/SaveChangesAs")

[node name="Engine Block Coordinates" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 354.0
offset_right = 203.0
offset_bottom = 377.0
text = "Engine Block Coordinates"

[node name="Engine Block Preview" type="Label" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 354.0
offset_right = 422.0
offset_bottom = 377.0
text = "Engine Block Preview"

[node name="EngineBlockCustomizer" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 374.0
offset_right = 163.0
offset_bottom = 506.0

[node name="PanelBG" type="NinePatchRect" parent="EngineBlockCustomizer"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_26mwm")
region_rect = Rect2(1, 1, 46, 47)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="A1" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 29.0
offset_bottom = 30.0

[node name="A2" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 29.0
offset_top = 6.0
offset_right = 53.0
offset_bottom = 30.0

[node name="A3" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 53.0
offset_top = 6.0
offset_right = 77.0
offset_bottom = 30.0

[node name="A4" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 77.0
offset_top = 6.0
offset_right = 101.0
offset_bottom = 30.0

[node name="A5" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 101.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 30.0

[node name="B1" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 5.0
offset_top = 30.0
offset_right = 29.0
offset_bottom = 54.0

[node name="B2" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 29.0
offset_top = 30.0
offset_right = 53.0
offset_bottom = 54.0

[node name="B3" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 53.0
offset_top = 30.0
offset_right = 77.0
offset_bottom = 54.0

[node name="B4" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 77.0
offset_top = 30.0
offset_right = 101.0
offset_bottom = 54.0

[node name="B5" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 101.0
offset_top = 30.0
offset_right = 125.0
offset_bottom = 54.0

[node name="C1" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 29.0
offset_bottom = 78.0

[node name="C2" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 29.0
offset_top = 54.0
offset_right = 53.0
offset_bottom = 78.0

[node name="C3" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 53.0
offset_top = 54.0
offset_right = 77.0
offset_bottom = 78.0

[node name="C4" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 77.0
offset_top = 54.0
offset_right = 101.0
offset_bottom = 78.0

[node name="C5" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 101.0
offset_top = 54.0
offset_right = 125.0
offset_bottom = 78.0

[node name="D1" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 5.0
offset_top = 78.0
offset_right = 29.0
offset_bottom = 102.0

[node name="D2" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 29.0
offset_top = 78.0
offset_right = 53.0
offset_bottom = 102.0

[node name="D3" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 53.0
offset_top = 78.0
offset_right = 77.0
offset_bottom = 102.0

[node name="D4" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 77.0
offset_top = 78.0
offset_right = 101.0
offset_bottom = 102.0

[node name="D5" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 101.0
offset_top = 78.0
offset_right = 125.0
offset_bottom = 102.0

[node name="E1" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 5.0
offset_top = 102.0
offset_right = 29.0
offset_bottom = 126.0

[node name="E2" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 29.0
offset_top = 102.0
offset_right = 53.0
offset_bottom = 126.0

[node name="E3" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 53.0
offset_top = 102.0
offset_right = 77.0
offset_bottom = 126.0

[node name="E4" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 77.0
offset_top = 102.0
offset_right = 101.0
offset_bottom = 126.0

[node name="E5" type="CheckBox" parent="EngineBlockCustomizer"]
layout_mode = 0
offset_left = 101.0
offset_top = 102.0
offset_right = 125.0
offset_bottom = 126.0

[node name="Tree" type="Tree" parent="."]
layout_mode = 0
offset_top = 24.0
offset_right = 471.0
offset_bottom = 269.0
allow_reselect = true

[node name="PartsHolder_Engine" parent="." instance=ExtResource("3_nijwa")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 210.0
offset_top = 380.0
offset_right = 498.0
offset_bottom = 668.0
grow_horizontal = 1
grow_vertical = 1

[node name="PieceData" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.823438
anchor_top = 0.0601852
anchor_right = 0.959375
anchor_bottom = 0.321296
metadata/_edit_use_anchors_ = true

[node name="_Piece Data_" type="Label" parent="PieceData"]
layout_mode = 0
offset_left = 82.0
offset_top = -3.0
offset_right = 320.0
offset_bottom = 20.0
text = "Piece Data"
vertical_alignment = 2

[node name="PieceName" type="TextEdit" parent="PieceData"]
layout_mode = 0
offset_left = 8.0
offset_top = 25.0
offset_right = 253.0
offset_bottom = 63.0
placeholder_text = "Piece Name"

[node name="PieceDescription" type="TextEdit" parent="PieceData"]
layout_mode = 0
offset_left = 8.0
offset_top = 73.0
offset_right = 253.0
offset_bottom = 274.0
placeholder_text = "Piece Description"

[node name="PanelBG" type="NinePatchRect" parent="PieceData"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_26mwm")
region_rect = Rect2(1, 1, 46, 47)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="FilepathName" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 308.0
offset_right = 499.0
offset_bottom = 341.0

[node name="Reset Tree" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 279.0
offset_right = 111.0
offset_bottom = 310.0
text = "Refresh Tree"

[node name="Clear Preview" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 547.0
offset_right = 165.0
offset_bottom = 578.0
text = "Clear Piece Preview"

[node name="camHolder" type="Node3D" parent="."]

[node name="MakerCam" type="Camera3D" parent="camHolder" node_paths=PackedStringArray("cyube")]
script = ExtResource("7_00eor")
cyube = NodePath("MeshInstance3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="camHolder/MakerCam"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, -0.117, -0.194)
visible = false
sorting_offset = 20.0
mesh = SubResource("BoxMesh_b8eto")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b8eto")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.97435, -0.181686, 0.132784, -1.0149e-08, 0.590056, 0.807362, -0.225036, -0.786654, 0.574921, -2.58875, 47.1188, -0.186724)
shadow_enabled = true
shadow_opacity = 0.62

[node name="Socket" parent="." instance=ExtResource("3_b8eto")]
invisibleInGame = true

[node name="CameraKeys" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 704.0
offset_right = 245.0
offset_bottom = 1013.0
text = "A/D - Yaw (Y rotation)
W/S - Pitch (X rotation)
Q/E - Zoom in/out

Shift + A/D - X Offset
Shift + W/S - Y Offset
Shift + Q/E - Roll (Z rotation)

Ctrl + A/D - Save/Load Rotation
Ctrl + W/S - Save/Load Position
Ctrl + Q - Reset Position
Ctrl + E - Reset Rotation"
vertical_alignment = 2

[node name="SaveChanges" type="Button" parent="."]
layout_mode = 0
offset_left = 1682.0
offset_top = 28.0
offset_right = 1912.0
offset_bottom = 59.0
text = "SAVE CHANGES (OVERWRITE)"
alignment = 2

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1842.0
offset_top = 136.0
offset_right = 1915.0
offset_bottom = 167.0
text = "EXIT"

[node name="Select_Unselect All" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 510.0
offset_right = 165.0
offset_bottom = 541.0
text = "Select/Unselect All"

[node name="ConfirmSavePopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 730.0
offset_top = 31.0
offset_right = -768.0
offset_bottom = -717.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelBG" type="NinePatchRect" parent="ConfirmSavePopup"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.071
anchor_right = 1.083
anchor_bottom = 1.0
offset_left = -0.0379982
offset_right = -0.0260315
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_26mwm")
region_rect = Rect2(1, 1, 46, 47)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="_Save this piece?_" type="Label" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = -61.0
offset_top = 10.0
offset_right = 505.0
offset_bottom = 59.0
text = "Save this Piece? 
(Changes may not be viewable until you reset the editor.)
Old path:"
horizontal_alignment = 1

[node name="_New path_" type="Label" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = 24.0
offset_top = 122.0
offset_right = 405.0
offset_bottom = 171.0
text = "New path:"
horizontal_alignment = 1

[node name="_tscn_" type="Label" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = 233.0
offset_top = 158.0
offset_right = 614.0
offset_bottom = 207.0
text = ".tscn
"
horizontal_alignment = 1

[node name="newPathPrefix" type="Label" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = -65.0
offset_top = 157.0
offset_right = 316.0
offset_bottom = 206.0
text = "res://scenes/prefabs/objects/pieces/"
horizontal_alignment = 1

[node name="NewPath" type="TextEdit" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = 270.0
offset_top = 150.0
offset_right = 404.0
offset_bottom = 188.0
text = "piece_test"

[node name="OldPath" type="TextEdit" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = -24.0
offset_top = 86.0
offset_right = 447.0
offset_bottom = 124.0
editable = false

[node name="SaveChangesAs" type="Button" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = 91.0
offset_top = 245.0
offset_right = 321.0
offset_bottom = 276.0
text = "CONFIRM SAVE"

[node name="CancelSave" type="Button" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = 92.0
offset_top = 289.0
offset_right = 322.0
offset_bottom = 321.0
text = "CANCEL SAVE"

[node name="Success" type="Label" parent="ConfirmSavePopup"]
layout_mode = 0
offset_left = -27.0
offset_top = 187.0
offset_right = 451.0
offset_bottom = 236.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Save Successful
"
horizontal_alignment = 1
autowrap_mode = 3

[node name="NewPiece" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 279.0
offset_right = 208.0
offset_bottom = 310.0
tooltip_text = "Creates a new entirely empty Piece.
Any changes you want to make to hitboxes or meches must be done in the editor."
text = "New Piece"

[node name="FollowerCamera" type="Camera3D" parent="." node_paths=PackedStringArray("camToFollow")]
script = ExtResource("6_bl5bc")
camToFollow = NodePath("../camHolder/MakerCam")
metadata/_custom_type_script = "uid://ceadpmi0boxfx"

[connection signal="button_clicked" from="Tree" to="." method="_on_tree_button_clicked"]
[connection signal="item_activated" from="Tree" to="." method="_on_tree_item_activated"]
[connection signal="mouse_entered" from="PieceData" to="." method="_on_piece_name_mouse_entered"]
[connection signal="mouse_exited" from="PieceData" to="." method="_on_piece_name_mouse_exited"]
[connection signal="mouse_entered" from="PieceData/PieceName" to="." method="_on_piece_name_mouse_entered"]
[connection signal="mouse_exited" from="PieceData/PieceName" to="." method="_on_piece_name_mouse_exited"]
[connection signal="text_changed" from="PieceData/PieceName" to="." method="_on_piece_name_text_changed"]
[connection signal="mouse_entered" from="PieceData/PieceDescription" to="." method="_on_piece_name_mouse_entered"]
[connection signal="mouse_exited" from="PieceData/PieceDescription" to="." method="_on_piece_name_mouse_exited"]
[connection signal="text_changed" from="PieceData/PieceDescription" to="." method="_on_piece_name_text_changed"]
[connection signal="pressed" from="Reset Tree" to="." method="_on_reset_tree_pressed"]
[connection signal="pressed" from="Clear Preview" to="." method="_on_clear_preview_pressed"]
[connection signal="pressed" from="Clear Preview" to="camHolder/MakerCam" method="_on_clear_preview_pressed"]
[connection signal="pressed" from="SaveChanges" to="." method="_on_save_changes_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Select_Unselect All" to="." method="_on_select_unselect_all_pressed"]
[connection signal="pressed" from="ConfirmSavePopup/SaveChangesAs" to="." method="_on_save_changes_as_pressed"]
[connection signal="pressed" from="ConfirmSavePopup/CancelSave" to="." method="_on_cancel_save_pressed"]
[connection signal="pressed" from="NewPiece" to="." method="_on_new_piece_pressed"]
